--- a/views/viewThanksToFirstRoute.ejs
+++ b/views/viewThanksToFirstRoute.ejs
@@ -7,7 +7,7 @@
 </head>
 <body class="p-4">
 
-  <button type="button" class="btn btn-warning">update button change pour amaury </button>
+  <button type="button" class="btn btn-warning">update button </button>
 
   <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
