--- a/views/viewThanksToFirstRoute.ejs
+++ b/views/viewThanksToFirstRoute.ejs
@@ -7,9 +7,9 @@
 </head>
 <body class="p-4">
 
-  <button type="button" class="btn btn-warning">update button amaury </button>
+  <button type="button" class="btn btn-primary">update button amaury </button>
   <button type="button" class="btn btn-warning">update button fred </button>
-  <button type="button" class="btn btn-warning">update button tony </button>
+  <button type="button" class="btn btn-primary">update button tony </button>
 
   <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
