--- a/views/viewThanksToFirstRoute.ejs
+++ b/views/viewThanksToFirstRoute.ejs
@@ -10,6 +10,7 @@
   <button type="button" class="btn btn-primary">update button amaury </button>
   <button type="button" class="btn btn-warning">update button fred </button>
   <button type="button" class="btn btn-primary">update button tony </button>
+  <button type="button" class="btn btn-primary">update button en plus  </button>
 
   <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
